Bild rund; schwarze links

--- a/nz/main.css
+++ b/nz/main.css
@@ -1,4 +1,4 @@
-body { 
+body {
     /*font-size: 300%; */
     max-width: 1280px;
     margin: auto;
@@ -10,13 +10,23 @@ header {
 }
 
 header p {
-    font-size: 0.8em; /*refernzgröße 0.8 = 80% kann man aber auc in pixel; besser aber in em weil browser auflösung*/
+    font-size: 0.8em;
+    /*refernzgröße 0.8 = 80% kann man aber auc in pixel; besser aber in em weil browser auflösung*/
     font-weight: bold;
     text-align: right;
     padding-right: 1em;
     margin-top: -2em;
 }
 
-.class, .white a:link, a:visited {
+.white,
+.white a:link,
+.white a:visited {
     color: white;
+}
+header nav img {
+    border-radius: 50%;
+}
+
+a {
+    color: black;
 }
