--- a/nz/main.css
+++ b/nz/main.css
@@ -70,3 +70,11 @@ footer {
     width: 100%;
     padding: 1em 0 3em 0;
 }
+
+footer .back {
+    float: left;
+}
+
+footer .next {
+    float: right;
+}
