--- a/nz/main.css
+++ b/nz/main.css
@@ -2,7 +2,7 @@ body {
     /*font-size: 300%; */
     max-width: 1280px;
     margin: auto;
-    font-family: Arial;
+    font-family: 'Baloo 2', cursive;
 }
 
 header {
@@ -44,6 +44,7 @@ main {
 
 main p {
     text-align: justify;
+    font-family: 'Liu Jian Mao Cao', cursive;
 }
 
 main figure {
